--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
     "version": "0.1.0",
     "private": true,
     "scripts": {
-        "start": "vue-cli-service serve",
-        "build": "vue-cli-service build",
-        "lint": "vue-cli-service lint"
+      "start": "vue-cli-service serve --openssl-legacy-provider",
+      "dev": "vue-cli-service serve --openssl-legacy-provider",
+      "build": "NODE_OPTIONS='--openssl-legacy-provider' vue-cli-service build"
     },
     "dependencies": {
         "axios": "^0.19.2",
